Use all available space for editor; scroll thumbs horizontally to resolve jumping around when scrolling next row into view

--- a/styles.css
+++ b/styles.css
@@ -38,28 +38,28 @@ body {
 }
 
 .images {
-  overflow-y: auto;
-  scroll-behavior: auto; /* instant */
+  overflow-x: auto;
+  scroll-behavior: auto;
   background-color: var(--color-bg-primary);
   padding-bottom: 2rem;
   border: var(--gutter) solid var(--color-bg-primary);
 }
 
 .image-list {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  display: flex;
+  height: 100%;
+  align-items: stretch; /* height of container */
+  flex-direction: row;
+  flex-wrap: nowrap;
   gap: var(--gutter);
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.image-list-item > .btn-img {
-  display: grid;
-  grid-template-rows: 1fr auto;
-  align-items: start;
-  background-color: var(--color-bg-secondary);
-  height: 100%;
+.image-list-item {
+  width: 7.8vw;
+  flex-shrink: 0;
 }
 
 .images img {
@@ -180,16 +180,13 @@ img {
 }
 
 .img-container {
-  max-height: 497px;
-  min-height: 200px;
+  position: relative; /* AP */
+
+  max-height: calc(70vh - 2rem);
+  min-height: calc(70vh - 2rem);
 }
 
-@media (min-width: 768px) {
-  .img-container {
-    min-height: 497px;
-  }
-}
-
+.editor,
 .img-container {
   background-color: var(--color-bg-tertiary); /* loading color */
 }
@@ -200,9 +197,18 @@ img {
 }
 
 .btn-img {
+  position: relative;
   background-color: var(--color-bg-secondary);
+  height: 100%;
   padding: 0;
   border: 0;
+  margin: 0;
+}
+
+.btn-img .image-meta {
+  position: absolute;
+  bottom: -1px; /* else small gap */
+  width: calc(100% - (var(--gutter) * 2));
   margin: 0;
 }
 
